crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__Config.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// This file is auto-generated by alef — DO NOT EDIT.
// To regenerate: alef generate
// To verify freshness: alef verify --exit-code
// Issues & docs: https://github.com/kreuzberg-dev/alef
package dev.kreuzberg;

import org.jspecify.annotations.Nullable;

/**
 * A demo configuration struct.
 */
public record Config(int value, String label, @Nullable String tag) {

    /**
     * Parse a {@code Config} from a JSON string.
     *
     * @param json JSON serialisation matching the Rust-side field names (snake_case).
     * @throws DemoRsException if the JSON cannot be deserialised.
     */
    public static Config fromJson(String json) throws DemoRsException {
        try {
            return new com.fasterxml.jackson.databind.ObjectMapper()
                .registerModule(new com.fasterxml.jackson.datatype.jdk8.Jdk8Module())
                .findAndRegisterModules()
                .setPropertyNamingStrategy(com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE)
                .setSerializationInclusion(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
                .configure(com.fasterxml.jackson.databind.MapperFeature.ACCEPT_CASE_INSENSITIVE_ENUMS, true)
                .readValue(json, Config.class);
        } catch (Exception e) {
            throw new DemoRsException("Failed to parse Config from JSON: " + e.getMessage(), e);
        }
    }
}
