crates/alef-backend-kotlin-android/tests/snapshots/snapshot_test__snapshot_basic__packages__kotlin_android__src__main__java__dev__kreuzberg__InvalidInputException.java.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// This file is auto-generated by alef — DO NOT EDIT.
// To regenerate: alef generate
// To verify freshness: alef verify --exit-code
// Issues & docs: https://github.com/kreuzberg-dev/alef
package dev.kreuzberg;

/** Exception thrown when input validation fails. */
@SuppressWarnings("checkstyle:LineLength")
public class InvalidInputException extends DemoRsException {
    /** Creates a new InvalidInputException. */
    public InvalidInputException(final String message) {
        super(1, message);
    }

    /** Creates a new InvalidInputException with a cause. */
    public InvalidInputException(final String message, final Throwable cause) {
        super(message, cause);
    }
}
